--- a/DueDo/app/src/main/res/values/strings.xml
+++ b/DueDo/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">DueDo</string>
     <string name="tasks">Tasks</string>
+    <string name="task_title">Task Title</string>
+    <string name="new_task">New Task</string>
+    <string name="task">Task</string>
+    <string name="save">Save</string>
 </resources>
