finished all CRUD operations

--- a/DueDo/app/src/main/res/values/strings.xml
+++ b/DueDo/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="task_content">Content</string>
     <string name="unsaved_exit_alert">You have unsaved data. Are you sure you want to exit?</string>
     <string name="title_is_required">Task title is required.</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="edit_task">Edit Task</string>
 </resources>
